fix word break in wisdom

--- a/src/sass/_includeView.scss
+++ b/src/sass/_includeView.scss
@@ -49,7 +49,7 @@
 		width: 100%;
 		padding: 1em 3rem;
 		position: relative;
-		word-break: break-all;
+		word-break: break-word;
 		
 		.header {
 			background-color: $black;
